Update author attribution with unified org list
- Standardize Zach Kelling as corresponding author
- Add Hanzo Industries, Lux Industries, Zoo Labs Foundation

--- a/hanzo-aso.tex
+++ b/hanzo-aso.tex
@@ -14,7 +14,11 @@
 \hypersetup{colorlinks=true,linkcolor=black,citecolor=blue,urlcolor=blue}
 
 \title{Hanzo ASO: Training-Free Group-Relative Policy Optimization for Agentic Code Generation}
-\author{Hanzo Industries Inc. \\ 995 Market St, San Francisco, CA \\ \texttt{contact@hanzo.ai}}
+\author{
+    Zach Kelling\thanks{Corresponding author: zach@lux.network} \\
+    \textit{Hanzo Industries \quad Lux Industries \quad Zoo Labs Foundation} \\
+    \texttt{research@lux.network}
+}
 \date{October 2025}
 
 \begin{document}
