--- a/hanzo-dso.tex
+++ b/hanzo-dso.tex
@@ -14,7 +14,12 @@
 \hypersetup{colorlinks=true,linkcolor=black,citecolor=blue,urlcolor=blue}
 
 \title{Hanzo DSO: Decentralized Semantic Optimization with Byzantine-Robust Prior Aggregation}
-\author{Hanzo Industries Inc. \\ 995 Market St, San Francisco, CA \\ \texttt{contact@hanzo.ai}}
+\author{
+    Zach Kelling\textsuperscript{1,2}\thanks{Corresponding author: research@hanzo.ai} \\
+    \\
+    \textsuperscript{1}\textit{Hanzo Industries Inc (Techstars '17), Los Angeles, CA} \\
+    \textsuperscript{2}\textit{Zoo Labs Foundation (501(c)(3)), \texttt{research@zoo.ngo}}
+}
 \date{October 2025}
 
 \begin{document}
