--- a/hanzo-network-architecture.tex
+++ b/hanzo-network-architecture.tex
@@ -13,9 +13,9 @@
 \title{\textbf{Hanzo Network: A Decentralized AI Compute Platform with Post-Quantum Security and Physics-Inspired LLM Routing}}
 
 \author{
-Hanzo AI Research Team \\
-\texttt{research@hanzo.ai} \\
-Hanzo Industries Inc.
+Zach Kelling\thanks{Corresponding author: zach@lux.network} \\
+\textit{Hanzo Industries \quad Lux Industries \quad Zoo Labs Foundation} \\
+\texttt{research@lux.network}
 }
 
 \date{Version: v2025.09 \\ September 2025}
