--- a/hanzo-network-whitepaper.tex
+++ b/hanzo-network-whitepaper.tex
@@ -15,7 +15,13 @@
 \hypersetup{colorlinks=true,linkcolor=black,citecolor=blue,urlcolor=blue}
 
 \title{Hanzo Network: A Hamiltonian Market Maker Layer-1 for Decentralized AI Compute and Semantic Learning}
-\author{Hanzo Industries Inc. \\ 995 Market St, San Francisco, CA \\ \texttt{contact@hanzo.ai}}
+\author{
+    Zach Kelling\textsuperscript{1,2,3}\thanks{Corresponding author: research@hanzo.ai} \\
+    \\
+    \textsuperscript{1}\textit{Hanzo Industries Inc (Techstars '17), Los Angeles, CA} \\
+    \textsuperscript{2}\textit{Lux Partners, \texttt{research@lux.network}} \\
+    \textsuperscript{3}\textit{Zoo Labs Foundation (501(c)(3)), \texttt{research@zoo.ngo}}
+}
 \date{October 2025}
 
 \begin{document}
